load react by copy paste

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
   <![endif]-->
 
   <div ng-view></div>
-
+  <div id="root"></div>
   <div>AngularJS seed app: v<span app-version></span></div>
 
   <!-- In production use:
@@ -33,6 +33,8 @@
   -->
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular-route/angular-route.js"></script>
+  <!-- <script src="lib/alissa-todo-react-query/lib/lib.js" type="module"></script> -->
+  <script src="lib/build/static/js/main.10878f0b.js"></script>
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
