--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,4 +1,7 @@
 <p>Fuck this!!!</p>
 <user-comp></user-comp>
 <todo-comp filter="false"></todo-comp>
+<counter-comp></counter-comp>
+<counter-comp></counter-comp>
+<counter-comp></counter-comp>
 
