--- a/app/index.html
+++ b/app/index.html
@@ -33,8 +33,7 @@
   -->
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular-route/angular-route.js"></script>
-  <!-- <script src="lib/alissa-todo-react-query/lib/lib.js" type="module"></script> -->
-  <script src="lib/build/static/js/main.a40f6765.js"></script>
+  <script src="lib/alissa-todo-react-query/lib/esm/index.js" type="module"></script>
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
